<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>ShopAvatarEditor</class>
 <widget class="QFrame" name="ShopAvatarEditor">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>616</width>
    <height>503</height>
   </rect>
  </property>
  <property name="sizePolicy">
   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
    <horstretch>0</horstretch>
    <verstretch>0</verstretch>
   </sizepolicy>
  </property>
  <property name="windowTitle">
   <string>VRShop Avatar Editor</string>
  </property>
  <property name="frameShape">
   <enum>QFrame::StyledPanel</enum>
  </property>
  <property name="frameShadow">
   <enum>QFrame::Raised</enum>
  </property>
  <layout class="QHBoxLayout" name="horizontalLayout">
   <item>
    <widget class="VR::OSGQT_Widget" name="m_pOSGQTWidget" native="true">
     <property name="minimumSize">
      <size>
       <width>351</width>
       <height>481</height>
      </size>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QFrame" name="frame">
     <property name="sizePolicy">
      <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
     <property name="minimumSize">
      <size>
       <width>221</width>
       <height>481</height>
      </size>
     </property>
     <property name="maximumSize">
      <size>
       <width>221</width>
       <height>481</height>
      </size>
     </property>
     <property name="frameShape">
      <enum>QFrame::StyledPanel</enum>
     </property>
     <property name="frameShadow">
      <enum>QFrame::Raised</enum>
     </property>
     <widget class="QToolButton" name="m_pToolButtonPlay">
      <property name="geometry">
       <rect>
        <x>80</x>
        <y>430</y>
        <width>80</width>
        <height>21</height>
       </rect>
      </property>
      <property name="styleSheet">
       <string notr="true">QToolButton {
	border: 1px solid rgb(67,67,67);
	color:rgb(102,102,102);
	background-color:rgb(70,70,70);
	selection-background-color: rgb(102,102,102);
}

QToolButton:hover	{
	color: white;
}

QToolButton:checked {
	background-color:rgb(102,102,102);
	color:white;
}
</string>
      </property>
      <property name="text">
       <string>Play</string>
      </property>
      <property name="checkable">
       <bool>true</bool>
      </property>
      <property name="checked">
       <bool>false</bool>
      </property>
      <property name="popupMode">
       <enum>QToolButton::DelayedPopup</enum>
      </property>
      <property name="toolButtonStyle">
       <enum>Qt::ToolButtonIconOnly</enum>
      </property>
     </widget>
     <widget class="QLabel" name="label_6">
      <property name="geometry">
       <rect>
        <x>30</x>
        <y>300</y>
        <width>81</width>
        <height>16</height>
       </rect>
      </property>
      <property name="text">
       <string>Scale on Y:</string>
      </property>
     </widget>
     <widget class="QLabel" name="label_7">
      <property name="geometry">
       <rect>
        <x>30</x>
        <y>330</y>
        <width>81</width>
        <height>16</height>
       </rect>
      </property>
      <property name="text">
       <string>Scale on Z:</string>
      </property>
     </widget>
     <widget class="QLabel" name="label_4">
      <property name="geometry">
       <rect>
        <x>20</x>
        <y>200</y>
        <width>81</width>
        <height>16</height>
       </rect>
      </property>
      <property name="text">
       <string>Frame To:</string>
      </property>
     </widget>
     <widget class="QLabel" name="label_8">
      <property name="geometry">
       <rect>
        <x>20</x>
        <y>380</y>
        <width>81</width>
        <height>16</height>
       </rect>
      </property>
      <property name="text">
       <string>Translate on Z:</string>
      </property>
     </widget>
     <widget class="QLabel" name="label_5">
      <property name="geometry">
       <rect>
        <x>30</x>
        <y>270</y>
        <width>81</width>
        <height>16</height>
       </rect>
      </property>
      <property name="text">
       <string>Scale on X:</string>
      </property>
     </widget>
     <widget class="QLabel" name="label_3">
      <property name="geometry">
       <rect>
        <x>20</x>
        <y>160</y>
        <width>81</width>
        <height>16</height>
       </rect>
      </property>
      <property name="text">
       <string>Frame From:</string>
      </property>
     </widget>
     <widget class="QLabel" name="label_2">
      <property name="geometry">
       <rect>
        <x>30</x>
        <y>70</y>
        <width>61</width>
        <height>16</height>
       </rect>
      </property>
      <property name="text">
       <string>Output File</string>
      </property>
     </widget>
     <widget class="QLabel" name="label">
      <property name="geometry">
       <rect>
        <x>30</x>
        <y>30</y>
        <width>51</width>
        <height>20</height>
       </rect>
      </property>
      <property name="text">
       <string>Input File</string>
      </property>
     </widget>
     <widget class="QDoubleSpinBox" name="m_pDoubleSpinBoxPosZ">
      <property name="geometry">
       <rect>
        <x>130</x>
        <y>370</y>
        <width>62</width>
        <height>22</height>
       </rect>
      </property>
      <property name="minimum">
       <double>-99.989999999999995</double>
      </property>
      <property name="singleStep">
       <double>0.010000000000000</double>
      </property>
     </widget>
     <widget class="QDoubleSpinBox" name="m_pDoubleSpinBoxScaleX">
      <property name="geometry">
       <rect>
        <x>120</x>
        <y>270</y>
        <width>62</width>
        <height>22</height>
       </rect>
      </property>
      <property name="singleStep">
       <double>0.010000000000000</double>
      </property>
      <property name="value">
       <double>1.000000000000000</double>
      </property>
     </widget>
     <widget class="QDoubleSpinBox" name="m_pDoubleSpinBoxScaleY">
      <property name="geometry">
       <rect>
        <x>120</x>
        <y>300</y>
        <width>62</width>
        <height>22</height>
       </rect>
      </property>
      <property name="singleStep">
       <double>0.010000000000000</double>
      </property>
      <property name="value">
       <double>1.000000000000000</double>
      </property>
     </widget>
     <widget class="QDoubleSpinBox" name="m_pDoubleSpinBoxScaleZ">
      <property name="geometry">
       <rect>
        <x>120</x>
        <y>330</y>
        <width>62</width>
        <height>22</height>
       </rect>
      </property>
      <property name="singleStep">
       <double>0.010000000000000</double>
      </property>
      <property name="value">
       <double>1.000000000000000</double>
      </property>
     </widget>
     <widget class="QSpinBox" name="m_pSpinBoxFrameFrom">
      <property name="geometry">
       <rect>
        <x>110</x>
        <y>160</y>
        <width>91</width>
        <height>22</height>
       </rect>
      </property>
      <property name="maximum">
       <number>9999</number>
      </property>
     </widget>
     <widget class="QSpinBox" name="m_pSpinBoxFrameTo">
      <property name="geometry">
       <rect>
        <x>110</x>
        <y>200</y>
        <width>91</width>
        <height>22</height>
       </rect>
      </property>
      <property name="maximum">
       <number>9999</number>
      </property>
     </widget>
     <widget class="QPushButton" name="m_pPushButtonLoadAvatar">
      <property name="geometry">
       <rect>
        <x>100</x>
        <y>30</y>
        <width>80</width>
        <height>21</height>
       </rect>
      </property>
      <property name="text">
       <string>Load Avatar</string>
      </property>
     </widget>
     <widget class="QPushButton" name="m_pPushButtonSaveAvatar">
      <property name="geometry">
       <rect>
        <x>100</x>
        <y>70</y>
        <width>80</width>
        <height>21</height>
       </rect>
      </property>
      <property name="text">
       <string>Save Avatar</string>
      </property>
     </widget>
    </widget>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>VR::OSGQT_Widget</class>
   <extends>QWidget</extends>
   <header location="global">vrosgqt_widget.h</header>
   <container>1</container>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections/>
</ui>
